--- a/app/page.module.css
+++ b/app/page.module.css
@@ -106,21 +106,21 @@
 .main {
   height: 100vh;
   background-color: var(--color-background);
-  padding: 0.5rem;
+  padding: 0.25rem 0.5rem;
   overflow: hidden;
 }
 
 .mainContent {
   display: flex;
   flex-direction: column;
-  gap: 0.25rem;
+  gap: 0.125rem;
 }
 
 @media (min-width: 1024px) {
   .mainContent {
     flex-direction: row;
     align-items: flex-start;
-    gap: 0.5rem;
+    gap: 0.25rem;
   }
 }
 
